--- a/app/src/main/res/layout/catalog.xml
+++ b/app/src/main/res/layout/catalog.xml
@@ -17,8 +17,7 @@
                         android:layout_height="wrap_content"
                         android:singleLine="true"
                         android:textStyle="italic"
-                        android:textColor="@android:color/white"
-                        android:onClick="onBackClick"/>
+                        android:textColor="@android:color/white"/>
                 <GridLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
