--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,39 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="n1">
-        <item>Сезон</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
+    <string-array name="season">
+        <item>~</item>
+        <item>Зима</item>
+        <item>Весна/Осень</item>
+        <item>Лето</item>
     </string-array>
-    <string-array name="n2">
-        <item>Стиль</item>
-    </string-array>
-    <string-array name="n3">
-        <item>Цвет</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
-    </string-array>
-    <string-array name="n4">
-        <item>Состояние</item>
-    </string-array>
-    <string-array name="categories_type">
-        <item>Цвет</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
+    <string-array name="state">
+        <item>~</item>
+        <item>Новое</item>
+        <item>Свежее</item>
     </string-array>
 </resources>
