--- a/app/src/main/res/layout/adding_item.xml
+++ b/app/src/main/res/layout/adding_item.xml
@@ -18,7 +18,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:visibility="gone" />
 
             <Button
                 android:id="@+id/btnPhotoAdd"
@@ -33,7 +34,7 @@
                 android:id="@+id/category_spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-                android:padding="10dp" />
+            android:padding="10dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -141,12 +142,12 @@
                 android:layout_height="wrap_content"
                 android:text="Стили:"
                 android:textSize="24sp" />
+
             <LinearLayout
                 android:id="@+id/style_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-            </LinearLayout>
+                android:orientation="vertical"></LinearLayout>
         </LinearLayout>
 
         <Button
