--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -1,96 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:dividerPadding="1dp"
-              android:minHeight="@dimen/layout_library_height"
-              android:orientation="horizontal"
-              android:showDividers="middle">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:dividerPadding="1dp"
+    android:minHeight="@dimen/layout_library_height"
+    android:orientation="horizontal"
+    android:background="@drawable/btn_selector"
+    android:showDividers="middle">
 
     <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingLeft="8dp"
-            android:paddingRight="0dp">
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:paddingLeft="8dp"
+        android:paddingRight="0dp">
 
         <FrameLayout
-                android:layout_width="52dp"
-                android:layout_height="match_parent"
-                android:minHeight="48dp">
+            android:layout_width="52dp"
+            android:layout_height="match_parent"
+            android:minHeight="48dp">
 
             <ImageView
-                    android:id="@+id/cover"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/fallback_cover"/>
+                android:id="@+id/cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:scaleType="fitCenter"
+                android:src="@drawable/fallback_cover" />
+
             <ImageView
-                    android:id="@+id/mini_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="top|left"
-                    android:scaleType="fitCenter"/>
+                android:id="@+id/mini_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|left"
+                android:scaleType="fitCenter" />
         </FrameLayout>
 
         <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="4dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="4dp">
 
             <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_weight="1">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
                 <TextView
-                        android:id="@+id/tvApparelName"
-                        android:layout_height="0dp"
-                        android:layout_width="wrap_content"
-                        android:ellipsize="end"
-                        android:textSize="@dimen/name_text_size"
-                        android:layout_weight="1"
-                        android:textAppearance="?android:attr/textAppearanceLarge"/>
-
-                <TextView
-                        android:id="@+id/tvApparelStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        android:ellipsize="end"
-                        android:singleLine="true"
-                        android:textSize="@dimen/style_text_size"
-                        android:textAppearance="?android:attr/textAppearanceLarge"/>
-
-            </LinearLayout>
-            <TextView
-                    android:id="@+id/tvApparelTemperature"
+                    android:id="@+id/tvApparelName"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
-                    android:singleLine="true"
                     android:layout_weight="1"
-                    android:textSize="@dimen/temperature_text_size"
-                    android:textAppearance="?android:attr/textAppearanceMedium"/>
-            <TextView
-                    android:id="@+id/tvAppareldates"
+                    android:ellipsize="end"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="@dimen/name_text_size" />
+
+                <TextView
+                    android:id="@+id/tvApparelStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:ellipsize="end"
                     android:singleLine="true"
-                    android:ellipsize="marquee"
-                    android:layout_weight="1"
-                    android:textSize="@dimen/date_text_size"
-                    android:textAppearance="?android:attr/textAppearanceMedium"/>
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="@dimen/style_text_size" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvApparelTemperature"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="@dimen/temperature_text_size" />
+
+            <TextView
+                android:id="@+id/tvAppareldates"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="marquee"
+                android:singleLine="true"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="@dimen/date_text_size" />
+
             <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:progress="0"
-                    android:visibility="visible"
-                    android:indeterminate="false"/>
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="false"
+                android:progress="0"
+                android:visibility="visible" />
 
         </LinearLayout>
     </LinearLayout>
