--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="transparent_gray">#442c4c8c</color>
     <color name="transparent_dark_gray">#f02c4c8c</color>
+    <color name="lite_back">#ffdbe7</color>
 </resources>
