--- a/app/src/main/res/layout/travel_fragment.xml
+++ b/app/src/main/res/layout/travel_fragment.xml
@@ -39,34 +39,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <GridLayout
+                <HorizontalScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:columnCount="2"
-                    android:rowCount="2">
+                    android:layout_height="wrap_content">
 
-                    <CheckBox
-                        android:id="@+id/cb_style"
+                    <LinearLayout
+                        android:id="@+id/checkboxes"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/style_asf"/>
-
-                    <Spinner
-                        android:id="@+id/style_spinner"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <CheckBox
-                        android:id="@+id/cb_color"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/color_asf" />
-
-                    <Spinner
-                        android:id="@+id/color_spinner"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </GridLayout>
+                        android:orientation="horizontal" />
+                </HorizontalScrollView>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -83,15 +65,45 @@
                         android:id="@+id/cb_clean"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/clean_asf"/>
+                        android:text="@string/clean_asf" />
 
                     <CheckBox
                         android:id="@+id/cb_for_weather"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/for_weather_asf"
-                        android:visibility="gone" />
+                        android:text="@string/for_weather_asf" />
 
+                </LinearLayout>
+
+                <EditText
+                    android:id="@+id/day_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/day_number"
+                    android:inputType="numberDecimal"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/bag_size"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <SeekBar
+                        android:id="@+id/bag_size"
+                        android:layout_width="0dp"
+                        android:layout_weight="3"
+                        android:layout_height="wrap_content"
+                        android:max="4"/>
+
+                    <TextView
+                        android:id="@+id/tv_bag_size"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -110,7 +122,8 @@
                 fcf:maxRotation="45"
                 fcf:unselectedAlpha="0.3"
                 fcf:unselectedSaturation="0.0"
-                fcf:unselectedScale="0.4" />
+                fcf:unselectedScale="0.4"
+                android:visibility="gone"/>
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
