--- a/app/src/main/res/menu/element_menu.xml
+++ b/app/src/main/res/menu/element_menu.xml
@@ -4,12 +4,19 @@
 
     <item
             android:id="@+id/action_delete"
-            android:orderInCategory="1"
-            android:showAsAction="always"
+            android:orderInCategory="3"
             android:title="@string/delete_item"/>
     <item
             android:id="@+id/action_wash"
-            android:orderInCategory="1"
-            android:showAsAction="ifRoom"
+            android:orderInCategory="2"
             android:title="@string/wash"/>
+    <item
+        android:id="@+id/action_put_on"
+        android:orderInCategory="0"
+        android:title="@string/put_on"/>
+
+    <item
+        android:id="@+id/action_edit"
+        android:orderInCategory="1"
+        android:title="@string/edit_item"/>
 </menu>
